--- a/app/src/main/res/layout/activity_start_parking.xml
+++ b/app/src/main/res/layout/activity_start_parking.xml
@@ -1,14 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+         xmlns:app="http://schemas.android.com/apk/res-auto"
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
+         android:orientation="vertical">
 
-    <TextView
-            android:id="@+id/parking_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="开始停车"/>
+        <android.support.v7.widget.Toolbar
+                android:id="@+id/start_parking_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="#EEAD0E"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:textSize="24sp"
+                        android:text="附近的停车场"/>
+
+                <ImageView
+                        android:id="@+id/start_parking_search_image"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_search"
+                        android:layout_gravity="right"
+                        android:layout_marginRight="25dp"
+                        />
+
+        </android.support.v7.widget.Toolbar>
+
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/start_parking_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
 
 </LinearLayout>
+
