--- a/app/src/main/res/layout/activity_bank_card_info.xml
+++ b/app/src/main/res/layout/activity_bank_card_info.xml
@@ -17,7 +17,9 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:drawablePadding="0dp"
+                android:layout_gravity="start"
+                android:textAlignment="textStart"
                 android:textSize="18sp"
                 android:textColor="#FFFFFF"
                 android:textStyle="bold"
