--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
@@ -10,7 +11,7 @@
             android:layout_height="wrap_content"
             android:visibility="gone"/>
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="9">
@@ -21,18 +22,21 @@
                 android:layout_height="match_parent"
                 android:clickable="true"/>
 
-        <Button
-                android:id="@+id/real_time_position_request_button"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentTop="true"
+        <android.support.design.widget.FloatingActionButton
+                android:id="@+id/real_time_position_request_fbutton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|end"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="30dp"
-                android:shadowRadius="5"
-                android:background="@drawable/ic_real_time_position"/>
+                app:backgroundTint="#E8E8E8"
+                app:elevation="8dp"
+                app:borderWidth="0dp"
+                app:fabSize="mini"
+                android:scaleType="center"
+                android:src="@drawable/ic_real_time_position"/>
 
-    </RelativeLayout>
+    </FrameLayout>
 
     <LinearLayout
             android:layout_width="match_parent"
