--- a/app/src/main/res/layout/activity_parking_lot_information.xml
+++ b/app/src/main/res/layout/activity_parking_lot_information.xml
@@ -28,8 +28,11 @@
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="right"
-                        android:textSize="24sp"
+                        android:layout_gravity="start"
+                        android:textAlignment="textStart"
+                        android:textSize="18sp"
+                        android:textColor="#FFFFFF"
+                        android:textStyle="bold"
                         android:layout_marginRight="25dp"
                         android:text="停车场信息"/>
 
