--- a/app/src/main/res/layout/activity_retrieve_password.xml
+++ b/app/src/main/res/layout/activity_retrieve_password.xml
@@ -39,31 +39,81 @@
                 android:background="@color/cardview_light_background"
                 android:orientation="vertical">
 
-            <EditText
-                    android:id="@+id/retrieve_password_origin_edittext"
+            <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="请输入原密码"
-                    android:layout_marginTop="20dp"
                     android:layout_marginBottom="20dp"
-                    android:inputType="textPassword"
-                    android:maxLines="1"/>
-            <EditText
-                    android:id="@+id/retrieve_password_first_new_edittext"
+                    android:orientation="vertical">
+                <EditText
+                        android:id="@+id/retrieve_password_origin_edittext"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="请输入原密码"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginBottom="0dp"
+                        android:inputType="textPassword"
+                        android:maxLines="1"/>
+                <TextView
+                        android:id="@+id/register_password_origin_condition_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="10sp"
+                        android:textColor="#FF0000"
+                        android:layout_marginLeft="5dp"
+                        android:text=""
+                        android:layout_marginBottom="0dp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="请输入新密码"
                     android:layout_marginBottom="20dp"
-                    android:inputType="textPassword"
-                    android:maxLines="1"/>
-            <EditText
-                    android:id="@+id/retrieve_password_second_new_edittext"
+                    android:orientation="vertical">
+                <EditText
+                        android:id="@+id/retrieve_password_first_new_edittext"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="请输入新密码"
+                        android:layout_marginBottom="0dp"
+                        android:inputType="textPassword"
+                        android:maxLines="1"/>
+                <TextView
+                        android:id="@+id/retrieve_password_first_new_condition_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="10sp"
+                        android:textColor="#FF0000"
+                        android:layout_marginLeft="5dp"
+                        android:text="新密码应不少于6位字符"
+                        android:layout_marginBottom="0dp"/>
+            </LinearLayout>
+
+            <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="请再次输入新密码"
                     android:layout_marginBottom="20dp"
-                    android:inputType="textPassword"
-                    android:maxLines="1"/>
+                    android:orientation="vertical">
+
+                <EditText
+                        android:id="@+id/retrieve_password_second_new_edittext"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="请再次输入新密码"
+                        android:layout_marginBottom="0dp"
+                        android:inputType="textPassword"
+                        android:maxLines="1"/>
+                <TextView
+                        android:id="@+id/retrieve_password_second_new_condition_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="10sp"
+                        android:textColor="#FF0000"
+                        android:layout_marginLeft="5dp"
+                        android:text="请再次输入新密码"
+                        android:layout_marginBottom="0dp"/>
+            </LinearLayout>
+
             <Button
                     android:id="@+id/retrieve_password_confirm_button"
                     android:layout_width="match_parent"
