--- a/app/src/main/res/layout/activity_start_parking.xml
+++ b/app/src/main/res/layout/activity_start_parking.xml
@@ -17,7 +17,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:textSize="24sp"
+                        android:textSize="18sp"
+                        android:textColor="#FFFFFF"
+                        android:textStyle="bold"
                         android:text="附近的停车场"/>
 
                 <ImageView
